--- a/day-1-introduction-to-python-part-I/00 - Jupyter Notebook Introduction.ipynb
+++ b/day-1-introduction-to-python-part-I/00 - Jupyter Notebook Introduction.ipynb
@@ -2,18 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T21:03:46.942667Z",
-     "start_time": "2019-06-23T21:03:46.919857Z"
+     "end_time": "2019-07-01T11:43:42.334875Z",
+     "start_time": "2019-07-01T11:43:42.326925Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunss.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-weight: bold;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunsx.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-style: oblique;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunsi.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-weight: bold;\n",
+       "        font-style: oblique;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunso.otf');\n",
+       "    }\n",
+       "    h1 {\n",
+       "        font-family: Helvetica, serif;\n",
+       "    }\n",
+       "    h4{\n",
+       "        margin-top:12px;\n",
+       "        margin-bottom: 3px;\n",
+       "       }\n",
+       "    div.text_cell_render{\n",
+       "        font-family: Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "        line-height: 145%;\n",
+       "        font-size: 130%;\n",
+       "        margin-left:auto;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    .CodeMirror{\n",
+       "            font-family: \"Source Code Pro\", source-code-pro,Consolas, monospace;\n",
+       "    }\n",
+       "    .text_cell_render h5 {\n",
+       "        font-weight: 300;\n",
+       "        font-size: 22pt;\n",
+       "        color: #4057A1;\n",
+       "        font-style: italic;\n",
+       "        margin-bottom: .5em;\n",
+       "        margin-top: 0.5em;\n",
+       "        display: block;\n",
+       "    }\n",
+       "    \n",
+       "    .warning{\n",
+       "        color: rgb( 240, 20, 20 )\n",
+       "        }  \n",
+       "</style>\n",
+       "<script>\n",
+       "    MathJax.Hub.Config({\n",
+       "                        TeX: {\n",
+       "                           extensions: [\"AMSmath.js\"]\n",
+       "                           },\n",
+       "                tex2jax: {\n",
+       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+       "                },\n",
+       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+       "                \"HTML-CSS\": {\n",
+       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+       "                }\n",
+       "        });\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.core.display import HTML\n",
     "from IPython.lib.display import YouTubeVideo\n",
-    "\n",
     "\n",
     "def css_styling():\n",
     "    styles = open(\"../Data/www/styles/custom.css\", \"r\").read()\n",
@@ -34,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python and its interpreter\n",
+    "# Python and its interpreter\n",
     "\n",
     "When you have a compiled language, typically what you have to do is write all of the code first. Then you have to run some commands to turn that code into a program that can be executed by the machine. At that point, you can then run your own program.\n",
     "\n",
@@ -56,14 +135,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T21:04:24.477446Z",
-     "start_time": "2019-06-23T21:04:24.471191Z"
+     "end_time": "2019-07-01T11:44:35.946020Z",
+     "start_time": "2019-07-01T11:44:35.940115Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wordwordwordwordwordwordword'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'word' * 7"
    ]
@@ -113,11 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T21:05:36.295554Z",
-     "start_time": "2019-06-23T21:05:36.290159Z"
+     "end_time": "2019-07-01T11:45:28.564091Z",
+     "start_time": "2019-07-01T11:45:28.561109Z"
     }
    },
    "outputs": [],
@@ -129,14 +219,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T21:05:36.821616Z",
-     "start_time": "2019-06-23T21:05:36.811798Z"
+     "end_time": "2019-07-01T11:45:31.153674Z",
+     "start_time": "2019-07-01T11:45:31.147044Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Execute me second\n",
     "a_number * 2"
@@ -152,14 +253,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T21:05:38.199480Z",
-     "start_time": "2019-06-23T21:05:38.191644Z"
+     "end_time": "2019-07-01T11:45:42.741926Z",
+     "start_time": "2019-07-01T11:45:42.736147Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a_number * 5"
    ]
@@ -181,14 +293,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T21:05:40.171645Z",
-     "start_time": "2019-06-23T21:05:40.166430Z"
+     "end_time": "2019-07-01T11:45:49.146549Z",
+     "start_time": "2019-07-01T11:45:49.141541Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Greater than 2!\n"
+     ]
+    }
+   ],
    "source": [
     "if a_number > 2:\n",
     "    print('Greater than 2!')\n",
@@ -211,18 +331,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T21:05:51.442044Z",
-     "start_time": "2019-06-23T21:05:51.437079Z"
+     "end_time": "2019-07-01T11:46:21.781084Z",
+     "start_time": "2019-07-01T11:46:21.773973Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Place your cursor at the `_` and press tab\n",
     "\n",
-    "a_"
+    "a_number"
    ]
   },
   {
@@ -240,18 +371,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T21:05:55.273284Z",
-     "start_time": "2019-06-23T21:05:55.262122Z"
+     "end_time": "2019-07-01T11:46:56.744596Z",
+     "start_time": "2019-07-01T11:46:56.737673Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Place your cursor after the `(` and press Shift+Tab\n",
     "\n",
-    "range()"
+    "range(0,10)"
    ]
   },
   {
@@ -267,8 +409,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T11:47:15.788671Z",
+     "start_time": "2019-07-01T11:47:15.785142Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Highlight the lines and then press Cmd+/\n",
@@ -371,7 +518,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "319px"
+   },
    "toc_section_display": true,
    "toc_window_display": false
   }
