--- a/day-1-introduction-to-python-part-I/02 - Flow-Control.ipynb
+++ b/day-1-introduction-to-python-part-I/02 - Flow-Control.ipynb
@@ -2,9 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:21:19.517910Z",
+     "start_time": "2019-07-01T12:21:19.501962Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunss.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-weight: bold;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunsx.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-style: oblique;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunsi.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-weight: bold;\n",
+       "        font-style: oblique;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunso.otf');\n",
+       "    }\n",
+       "    h1 {\n",
+       "        font-family: Helvetica, serif;\n",
+       "    }\n",
+       "    h4{\n",
+       "        margin-top:12px;\n",
+       "        margin-bottom: 3px;\n",
+       "       }\n",
+       "    div.text_cell_render{\n",
+       "        font-family: Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "        line-height: 145%;\n",
+       "        font-size: 130%;\n",
+       "        margin-left:auto;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    .CodeMirror{\n",
+       "            font-family: \"Source Code Pro\", source-code-pro,Consolas, monospace;\n",
+       "    }\n",
+       "    .text_cell_render h5 {\n",
+       "        font-weight: 300;\n",
+       "        font-size: 22pt;\n",
+       "        color: #4057A1;\n",
+       "        font-style: italic;\n",
+       "        margin-bottom: .5em;\n",
+       "        margin-top: 0.5em;\n",
+       "        display: block;\n",
+       "    }\n",
+       "    \n",
+       "    .warning{\n",
+       "        color: rgb( 240, 20, 20 )\n",
+       "        }  \n",
+       "</style>\n",
+       "<script>\n",
+       "    MathJax.Hub.Config({\n",
+       "                        TeX: {\n",
+       "                           extensions: [\"AMSmath.js\"]\n",
+       "                           },\n",
+       "                tex2jax: {\n",
+       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+       "                },\n",
+       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+       "                \"HTML-CSS\": {\n",
+       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+       "                }\n",
+       "        });\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.core.display import HTML\n",
     "\n",
@@ -86,8 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:21:30.529846Z",
+     "start_time": "2019-07-01T12:21:30.526678Z"
+    }
+   },
    "outputs": [],
    "source": [
     "## Now fill in the part of the code that we do know\n",
@@ -151,9 +241,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:22:45.403875Z",
+     "start_time": "2019-07-01T12:22:45.398472Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I purchased  1  gallons of milk\n",
+      "I purchased  0  eggs\n"
+     ]
+    }
+   ],
    "source": [
     "# Define variables needed\n",
     "milk = 0\n",
@@ -179,9 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:24:36.212278Z",
+     "start_time": "2019-07-01T12:24:36.206230Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I purchased  1  gallons of milk\n",
+      "I purchased  0  egg\n"
+     ]
+    }
+   ],
    "source": [
     "# Make the final print statement grammatically correct with an `if` statement\n",
     "# Define variables needed\n",
@@ -192,9 +310,14 @@
     "milk += 1\n",
     "if store_has_eggs == True:\n",
     "    eggs += 12\n",
+    "\n",
+    "    \n",
     "# Check what was purchased\n",
     "print(\"I purchased \", milk, \" gallons of milk\")\n",
-    "print(\"I purchased \", eggs, \" eggs\")"
+    "if eggs>1:\n",
+    "    print(\"I purchased \", eggs, \" eggs\")\n",
+    "else:\n",
+    "    print(\"I purchased \", eggs, \" egg\")"
    ]
   },
   {
@@ -206,9 +329,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:25:05.192519Z",
+     "start_time": "2019-07-01T12:25:05.188333Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give it up for all the a-names!\n"
+     ]
+    }
+   ],
    "source": [
     "if 'a' in 'adam':\n",
     "    print('Give it up for all the a-names!')"
@@ -223,9 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:25:40.639599Z",
+     "start_time": "2019-07-01T12:25:40.633540Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That's not fair! They got more than me!\n"
+     ]
+    }
+   ],
    "source": [
     "my_pay = 5\n",
     "my_siblings_pay = 10\n",
@@ -244,9 +393,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:26:13.610512Z",
+     "start_time": "2019-07-01T12:26:13.605806Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That's not fair! They got more than me!\n"
+     ]
+    }
+   ],
    "source": [
     "my_pay = 5\n",
     "my_siblings_pay = 10\n",
@@ -268,9 +430,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:27:00.505674Z",
+     "start_time": "2019-07-01T12:27:00.500939Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That's not fair! They got more than me!\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify to handle all 3 conditions with what you already know\n",
     "my_pay = 5\n",
@@ -301,9 +476,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:27:54.154305Z",
+     "start_time": "2019-07-01T12:27:54.149167Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Well, that seems fair\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify to handle all 3 conditions with what you already know\n",
     "my_pay = 11\n",
@@ -370,9 +558,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:30:20.665551Z",
+     "start_time": "2019-07-01T12:30:20.660223Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The division is:  8\n"
+     ]
+    }
+   ],
    "source": [
     "# Our numeric variables\n",
     "number = 43\n",
@@ -438,9 +639,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:31:28.713280Z",
+     "start_time": "2019-07-01T12:31:28.707240Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(1, 5)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "range(1, 5)"
    ]
@@ -456,9 +673,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:31:54.872161Z",
+     "start_time": "2019-07-01T12:31:54.867312Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 5):\n",
     "    print(i)"
@@ -475,15 +708,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:34:11.903783Z",
+     "start_time": "2019-07-01T12:34:11.897314Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "36\n",
+      "---\n",
+      "2\n",
+      "6\n",
+      "36\n",
+      "---\n",
+      "3\n",
+      "9\n",
+      "36\n",
+      "---\n",
+      "4\n",
+      "12\n",
+      "36\n",
+      "---\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 5):\n",
     "    print(i)\n",
     "    print(i*3)\n",
-    "    i = 12\n",
-    "    print(i*3)\n",
+    "    j = 12\n",
+    "    print(j*3)\n",
     "    print('---')"
    ]
   },
@@ -496,9 +758,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:34:17.844555Z",
+     "start_time": "2019-07-01T12:34:17.839523Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "a\n",
+      "m\n",
+      "s\n"
+     ]
+    }
+   ],
    "source": [
     "phrase = 'hams'\n",
     "\n",
@@ -515,14 +793,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-01T12:35:14.759539Z",
+     "start_time": "2019-07-01T12:35:14.747651Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 h\n",
+      "1 a\n",
+      "2 m\n",
+      "3 s\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-74791bc6c45d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mphrase\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
    "source": [
     "phrase = 'hams'\n",
     "\n",
     "for i in range(5):\n",
-    "    print( phrase[i] )"
+    "    print( i,phrase[i] )"
    ]
   },
   {
@@ -612,7 +917,37 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
