--- a/day-4-machine-learning-part-I/00 - Data Loading.ipynb
+++ b/day-4-machine-learning-part-I/00 - Data Loading.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:17.601505Z",
-     "start_time": "2019-06-23T23:38:17.492631Z"
+     "end_time": "2019-07-03T13:42:05.417157Z",
+     "start_time": "2019-07-03T13:42:05.323095Z"
     }
    },
    "outputs": [
@@ -30,7 +30,7 @@
        "dict_keys(['data', 'target', 'target_names', 'images', 'DESCR'])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:17.903347Z",
-     "start_time": "2019-06-23T23:38:17.895804Z"
+     "end_time": "2019-07-03T13:42:06.010638Z",
+     "start_time": "2019-07-03T13:42:06.003117Z"
     }
    },
    "outputs": [
@@ -58,7 +58,7 @@
        "(1797, 64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:18.127905Z",
-     "start_time": "2019-06-23T23:38:18.122414Z"
+     "end_time": "2019-07-03T13:42:06.514461Z",
+     "start_time": "2019-07-03T13:42:06.506248Z"
     }
    },
    "outputs": [
@@ -83,7 +83,7 @@
        "(1797, 64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:18.369315Z",
-     "start_time": "2019-06-23T23:38:18.359540Z"
+     "end_time": "2019-07-03T13:42:06.944580Z",
+     "start_time": "2019-07-03T13:42:06.936295Z"
     }
    },
    "outputs": [
@@ -108,7 +108,7 @@
        "(1797,)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:18.578760Z",
-     "start_time": "2019-06-23T23:38:18.570418Z"
+     "end_time": "2019-07-03T13:42:07.352685Z",
+     "start_time": "2019-07-03T13:42:07.347322Z"
     }
    },
    "outputs": [
@@ -133,7 +133,7 @@
        "array([0, 1, 2, ..., 8, 9, 8])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:18.775840Z",
-     "start_time": "2019-06-23T23:38:18.769836Z"
+     "end_time": "2019-07-03T13:42:07.854457Z",
+     "start_time": "2019-07-03T13:42:07.848034Z"
     }
    },
    "outputs": [
@@ -158,7 +158,7 @@
        "array([178, 182, 177, 183, 181, 182, 181, 179, 174, 180])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,21 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:19.180108Z",
-     "start_time": "2019-06-23T23:38:19.006834Z"
+     "end_time": "2019-07-03T13:42:08.562678Z",
+     "start_time": "2019-07-03T13:42:08.391756Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1a24694550>"
+       "<matplotlib.image.AxesImage at 0x1a23b6ea58>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -210,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:19.249469Z",
-     "start_time": "2019-06-23T23:38:19.243250Z"
+     "end_time": "2019-07-03T13:42:09.000480Z",
+     "start_time": "2019-07-03T13:42:08.993763Z"
     }
    },
    "outputs": [
@@ -224,7 +224,7 @@
        "0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,11 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:20.248334Z",
-     "start_time": "2019-06-23T23:38:19.495270Z"
+     "end_time": "2019-07-03T13:42:10.100322Z",
+     "start_time": "2019-07-03T13:42:09.488425Z"
     }
    },
    "outputs": [
@@ -280,11 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:20.428301Z",
-     "start_time": "2019-06-23T23:38:20.421440Z"
+     "end_time": "2019-07-03T13:42:15.028844Z",
+     "start_time": "2019-07-03T13:42:14.971704Z"
     }
    },
    "outputs": [],
@@ -296,11 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:20.656305Z",
-     "start_time": "2019-06-23T23:38:20.650016Z"
+     "end_time": "2019-07-03T13:42:16.775542Z",
+     "start_time": "2019-07-03T13:42:16.766502Z"
     }
    },
    "outputs": [
@@ -310,7 +310,7 @@
        "(1797, 64)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,11 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:20.874609Z",
-     "start_time": "2019-06-23T23:38:20.869668Z"
+     "end_time": "2019-07-03T13:42:17.205694Z",
+     "start_time": "2019-07-03T13:42:17.197726Z"
     }
    },
    "outputs": [
@@ -335,7 +335,7 @@
        "(1347, 64)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,11 +346,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-23T23:38:21.088403Z",
-     "start_time": "2019-06-23T23:38:21.080817Z"
+     "end_time": "2019-07-03T13:42:17.656501Z",
+     "start_time": "2019-07-03T13:42:17.648181Z"
     }
    },
    "outputs": [
@@ -360,7 +360,7 @@
        "(450, 64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
