--- a/day-5-machine-learning-part-II/03 - Random Forests.ipynb
+++ b/day-5-machine-learning-part-II/03 - Random Forests.ipynb
@@ -791,6 +791,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-04T13:05:49.941099Z",
+     "start_time": "2019-07-04T13:05:49.937290Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-04T13:06:02.487512Z",
+     "start_time": "2019-07-04T13:06:02.466487Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7583834909716252"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
